[package]
name = "mythmallow"
description = "A top-down arena shooter roguelite in which you're a mythical marshmallow fighting against peasant munchies!"
categories = ["games"]
keywords = ["arena-shooter", "game", "mythical", "roguelite", "top-down"]
repository = "https://github.com/umut-sahin/mythmallow/"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Umut Şahin <umutsahin@protonmail.com>",
    "Emre Baba <emrebaba0@protonmail.com>",
    "Onur Şahin <onordsahin@proton.me>",
    "Arda Özger <mehmetardaozger@gmail.com>",
]

[dependencies]
mythmallow-core-actions = { path = "core/actions" }
mythmallow-core-assets = { path = "core/assets" }
mythmallow-core-bundles = { path = "core/bundles" }
mythmallow-core-commands = { path = "core/commands" }
mythmallow-core-components = { path = "core/components" }
mythmallow-core-constants = { path = "core/constants" }
mythmallow-core-dependencies = { path = "core/dependencies" }
mythmallow-core-events = { path = "core/events" }
mythmallow-core-interfaces = { path = "core/interfaces" }
mythmallow-core-localizations = { path = "core/localizations" }
mythmallow-core-plugins = { path = "core/plugins" }
mythmallow-core-registries = { path = "core/registries" }
mythmallow-core-resources = { path = "core/resources" }
mythmallow-core-sets = { path = "core/sets" }
mythmallow-core-states = { path = "core/states" }
mythmallow-core-systems = { path = "core/systems" }
mythmallow-enemies-sweet = { path = "content/enemies/sweet" }
mythmallow-items-greek = { path = "content/items/greek" }
mythmallow-mode-survival = { path = "content/modes/survival" }
mythmallow-players-greek = { path = "content/players/greek" }

[features]
default = ["development"]
development = [
    "mythmallow-core-actions/development",
    "mythmallow-core-assets/development",
    "mythmallow-core-bundles/development",
    "mythmallow-core-commands/development",
    "mythmallow-core-components/development",
    "mythmallow-core-constants/development",
    "mythmallow-core-dependencies/development",
    "mythmallow-core-events/development",
    "mythmallow-core-interfaces/development",
    "mythmallow-core-localizations/development",
    "mythmallow-core-plugins/development",
    "mythmallow-core-registries/development",
    "mythmallow-core-resources/development",
    "mythmallow-core-sets/development",
    "mythmallow-core-states/development",
    "mythmallow-core-systems/development",
    "mythmallow-enemies-sweet/development",
    "mythmallow-items-greek/development",
    "mythmallow-mode-survival/development",
    "mythmallow-players-greek/development",
]

[workspace]
resolver = "2"
members = [
    "core/actions",
    "core/assets",
    "core/bundles",
    "core/commands",
    "core/components",
    "core/constants",
    "core/dependencies",
    "core/events",
    "core/interfaces",
    "core/localizations",
    "core/plugins",
    "core/registries",
    "core/resources",
    "core/sets",
    "core/states",
    "core/systems",
    "content/enemies/sweet",
    "content/items/greek",
    "content/modes/survival",
    "content/players/greek",
]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
derivable_impls = "allow"
enum_variant_names = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"

[profile.web-release]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "debuginfo"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.web-release.build-override]
opt-level = 3
