[package]
name = "mythmallow-core-actions"
version = "0.1.0"
edition = "2021"

[dependencies]
mythmallow-core-dependencies = { path = "../dependencies" }
mythmallow-core-resources = { path = "../resources" }

[features]
development = [
    "mythmallow-core-dependencies/development",
    "mythmallow-core-resources/development",
]

[lints]
workspace = true
