[package]
name = "mythmallow-core-bundles"
version = "0.1.0"
edition = "2021"

[dependencies]
mythmallow-core-actions = { path = "../actions" }
mythmallow-core-components = { path = "../components" }
mythmallow-core-dependencies = { path = "../dependencies" }
mythmallow-core-interfaces = { path = "../interfaces" }
mythmallow-core-resources = { path = "../resources" }
mythmallow-core-states = { path = "../states" }

[features]
development = [
    "mythmallow-core-actions/development",
    "mythmallow-core-components/development",
    "mythmallow-core-dependencies/development",
    "mythmallow-core-interfaces/development",
    "mythmallow-core-resources/development",
    "mythmallow-core-states/development",
]

[lints]
workspace = true
