[package]
name = "mythmallow-core-components"
version = "0.1.0"
edition = "2021"

[dependencies]
mythmallow-core-constants = { path = "../constants" }
mythmallow-core-dependencies = { path = "../dependencies" }
serde = { version = "1.0", features = ["derive"] }

[features]
development = [
    "mythmallow-core-constants/development",
    "mythmallow-core-dependencies/development",
]

[lints]
workspace = true
