[package]
name = "mythmallow-core-dependencies"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = { version = "0.1" }
bevy = { version = "0.14", features = ["serialize"] }
bevy_console = { git = "https://github.com/msklosak/bevy-console", branch = "bevy_014" }
bevy_easings = { version = "0.14" }
bevy_editor_pls = { version = "0.9", optional = true }
bevy_fluent = { git = "https://github.com/umut-sahin/bevy_fluent", branch = "bevy-v0.14" }
bevy_prng = { version = "0.7", features = ["wyrand"] }
bevy_rand = { version = "0.7" }
clap = { version = "4.5", features = ["derive"] }
egui = { version = "0.28" }
fluent = { version = "0.16" }
fluent_content = { version = "0.0" }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", rev = "d328836" }
level-adjusted-log = { package = "log", version = "0.4", features = ["max_level_info", "release_max_level_info"] }
prettytable = { version = "0.10" }
rand = { version = "0.8" }
revy = { version = "0.17", optional = true }
serde = { version = "1.0", features = ["derive"] }
sickle_ui = { version = "0.3" }
smallvec = { version = "1.13", features = ["serde"] }
smol_str = { version = "0.2" }
strum = { version = "0.26" }
strum_macros = { version = "0.26" }
thiserror = { version = "1.0" }
toml = { version = "0.8" }
typed-builder = { version = "0.20" }
unic-langid = { version = "0.9", features = ["serde"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy-persistent = { version = "0.6", features = ["toml"] }
bevy-persistent-windows = { path = "../../../bevy-persistent-windows" }
dirs = { version = "5.0" }
sys-locale = { version = "0.3" }

[target.'cfg(target_family = "wasm")'.dependencies]
bevy-persistent = { version = "0.6", features = ["json"] }
console_error_panic_hook = { version = "0.1" }
sys-locale = { version = "0.3", features = ["js"] }
wasm-bindgen = { version = "0.2" }
web_instant = { package = "instant", version = "0.1", features = ["wasm-bindgen"] }
web-sys = { version = "=0.3.69", features = ["Element"] }

[features]
development = ["bevy/dynamic_linking", "bevy_editor_pls"]
rerun = ["revy"]

[lints]
workspace = true
