[package]
name = "mythmallow-core-interfaces"
version = "0.1.0"
edition = "2021"

[dependencies]
mythmallow-core-components = { path = "../components" }
mythmallow-core-constants = { path = "../constants" }
mythmallow-core-dependencies = { path = "../dependencies" }

[features]
development = [
    "mythmallow-core-components/development",
    "mythmallow-core-constants/development",
    "mythmallow-core-dependencies/development",
]

[lints]
workspace = true
