[package]
name = "mythmallow-core-resources"
version = "0.1.0"
edition = "2021"

[dependencies]
mythmallow-core-components = { path = "../components" }
mythmallow-core-constants = { path = "../constants" }
mythmallow-core-dependencies = { path = "../dependencies" }
mythmallow-core-interfaces = { path = "../interfaces" }
mythmallow-core-states = { path = "../states" }
serde = { version = "1.0", features = ["derive"] }

[features]
development = [
    "mythmallow-core-components/development",
    "mythmallow-core-constants/development",
    "mythmallow-core-dependencies/development",
    "mythmallow-core-interfaces/development",
    "mythmallow-core-states/development",
]

[lints]
workspace = true
