[package]
name = "mythmallow-core-sets"
version = "0.1.0"
edition = "2021"

[dependencies]
mythmallow-core-dependencies = { path = "../dependencies" }
mythmallow-core-states = { path = "../states" }
strum = { version = "0.26" }
strum_macros = { version = "0.26" }

[features]
development = [
    "mythmallow-core-dependencies/development",
    "mythmallow-core-states/development",
]

[lints]
workspace = true
