[package]
name = "mythmallow-core-systems"
version = "0.1.0"
edition = "2021"

[dependencies]
mythmallow-core-actions = { path = "../actions" }
mythmallow-core-assets = { path = "../assets" }
mythmallow-core-bundles = { path = "../bundles" }
mythmallow-core-components = { path = "../components" }
mythmallow-core-constants = { path = "../constants" }
mythmallow-core-dependencies = { path = "../dependencies" }
mythmallow-core-events = { path = "../events" }
mythmallow-core-interfaces = { path = "../interfaces" }
mythmallow-core-localizations = { path = "../localizations" }
mythmallow-core-registries = { path = "../registries" }
mythmallow-core-resources = { path = "../resources" }
mythmallow-core-states = { path = "../states" }

[features]
development = [
    "mythmallow-core-actions/development",
    "mythmallow-core-assets/development",
    "mythmallow-core-bundles/development",
    "mythmallow-core-components/development",
    "mythmallow-core-constants/development",
    "mythmallow-core-dependencies/development",
    "mythmallow-core-events/development",
    "mythmallow-core-interfaces/development",
    "mythmallow-core-localizations/development",
    "mythmallow-core-registries/development",
    "mythmallow-core-resources/development",
    "mythmallow-core-states/development",
]

[lints]
workspace = true
