[package]
name = "mythmallow-items-greek"
version = "0.0.0"
edition = "2021"

[dependencies]
mythmallow-core-data = { path = "../../../core/data" }
mythmallow-core-dependencies = { path = "../../../core/dependencies" }
mythmallow-core-logic = { path = "../../../core/logic" }

[features]
development = [
    "mythmallow-core-data/development",
    "mythmallow-core-dependencies/development",
    "mythmallow-core-logic/development",
]

[lints]
workspace = true
