[package]
name = "mythmallow-mode-survival"
version = "0.0.0"
edition = "2021"

[dependencies]
mythmallow-core-data = { path = "../../../core/data" }
mythmallow-core-dependencies = { path = "../../../core/dependencies" }

[features]
development = [
    "mythmallow-core-data/development",
    "mythmallow-core-dependencies/development",
]

[lints]
workspace = true
