[package]
name = "mythmallow-players-greek"
version = "0.0.0"
edition = "2021"

[dependencies]
mythmallow-core-data = { path = "../../../core/data" }
mythmallow-core-dependencies = { path = "../../../core/dependencies" }
mythmallow-items-greek = { path = "../../items/greek" }

[features]
development = [
    "mythmallow-core-data/development",
    "mythmallow-core-dependencies/development",
    "mythmallow-items-greek/development",
]

[lints]
workspace = true
